--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -714,11 +714,12 @@ body {
         justify-content: space-around;
         text-align: center;
         margin: auto;
-        background-color: rgb(236, 236, 236);
-        border-radius: 8PX;
+        background-color: rgb(248, 248, 248);
+        border-radius: 10PX;
         border: none;
         padding: 25px;
         width: 350px;
+        box-shadow: #f3f3f3;
         @media (max-width: 720px) {
             margin: 10px 0px; 
             padding: 20px;
@@ -816,6 +817,11 @@ body {
     width: 65px;
         height: 65px;
     border-radius: 50%;
+}
+.form{
+    h1{
+        color:$color-secondary
+    }
 }
 /* width */
 ::-webkit-scrollbar {
