--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -794,21 +794,12 @@ body .load img {
 }
 @media (max-width: 720px) {
   .profile {
-    margin: 10px 0px;
     padding: 20px;
     width: 350px;
   }
 }
 @media (max-width: 480px) {
   .profile {
-    margin: 10px 0px;
-    padding: 15px;
-    width: 300px;
-  }
-}
-@media (max-width: 370px) {
-  .profile {
-    margin: 10px 0px;
     padding: 15px;
     width: 300px;
   }
@@ -837,21 +828,33 @@ body .load img {
 .profile img {
   width: 100px;
   height: 100px;
-  border-radius: 50px;
+  border-radius: 50%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 @media (max-width: 720px) {
   .profile img {
     height: 75px;
     width: 75x;
-    border-radius: 37px;
   }
 }
 @media (max-width: 360px) {
   .profile img {
     height: 50px;
     height: 50px;
-    border-radius: 25px;
   }
+}
+.profile .btn-logout {
+  background-color: #ff6c2c;
+  color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+.profile .btn-logout:hover {
+  background-color: #ffffff;
+  color: #ff6c2c;
+  border: #ff6c2c;
 }
 @media (max-width: 720px) {
   .profile #save-btn, .profile .btn-danger, .profile .btn-warning, .profile .btn-logout {
@@ -867,20 +870,6 @@ body .load img {
   .profile #save-btn, .profile .btn-danger, .profile .btn-warning, .profile .btn-logout {
     font-size: 12px;
   }
-}
-
-.btn-logout {
-  background-color: #ff6c2c;
-  color: #ffffff;
-  border: none;
-  border-radius: 8px;
-  padding: 15px;
-  margin-bottom: 20px;
-}
-.btn-logout a a:hover {
-  background-color: #ffffff;
-  color: #ff6c2c;
-  border: #ff6c2c;
 }
 
 #tables {
