--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -746,17 +746,10 @@ body {
         width: 350px;
         box-shadow: #f3f3f3;
         @media (max-width: 720px) {
-            margin: 10px 0px; 
             padding: 20px;
             width:350px;
         }
         @media (max-width: 480px){
-            margin: 10px 0px; 
-            padding: 15px;
-            width:300px;
-        }
-        @media (max-width: 370px){
-            margin: 10px 0px; 
             padding: 15px;
             width:300px;
         }
@@ -783,21 +776,34 @@ body {
     img {
         width: 100px;
         height: 100px;
-        border-radius: 50px;
+        border-radius: 50%;
+        object-fit: contain;
 
         @media (max-width: 720px) {
             height: 75px; //for viewports <= 720px
             width: 75x;
-            border-radius: 37px;
         }
 
         @media (max-width: 360px) {
             height: 50px; // for viewports <= 370px
             height: 50px;
-            border-radius: 25px;
 
         }
     }     
+
+    .btn-logout{
+        background-color: #ff6c2c;
+        color: #ffffff;
+        border:none;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        
+        &:hover{
+            background-color: #ffffff;
+            color: $color-primary;
+            border:#ff6c2c
+        }
+    }
 
     #save-btn, .btn-danger, .btn-warning, .btn-logout {
         @media (max-width: 720px) {
@@ -810,21 +816,6 @@ body {
 
         @media (max-width: 370px) {
             font-size: 12px; // font size for viewports <= 370px
-        }
-    }
-}
-.btn-logout{
-    background-color: #ff6c2c;
-    color: #ffffff;
-    border:none;
-    border-radius: 8px;
-    padding: 15px;
-    margin-bottom: 20px;
-    a{
-        a:hover{
-            background-color: #ffffff;
-            color: $color-primary;
-            border:#ff6c2c
         }
     }
 }
