--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -164,7 +164,7 @@ body {
         }
 
         #total {
-            color: #ffffff;
+            color: $color-secondary;
         }
 
         input[type="date" i], #total, #add {
